--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:security/recommended",
-    "airbnb-base",
-    "google"
+    "plugin:jsdoc/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -267,7 +266,7 @@
     "jsdoc/no-undefined-types": "error",
     "jsdoc/require-description-complete-sentence": "error",
     "jsdoc/require-example": "error",
-    "jsdoc/require-hyphen-before-param-description": "error",
+    "jsdoc/require-hyphen-before-param-description": "warn",
     "jsdoc/require-param": "error",
     "jsdoc/require-param-description": "error",
     "jsdoc/require-param-name": "error",
@@ -284,12 +283,7 @@
       "skipWords": [
         "johntalton",
         "todo", "const", "eslint", "bitwise",
-        "rasbus", "mcp23", "mcp23017", "Mcp23",
-        "mcp23gpio", "mcp23base",
-        "util", "common8bitpoll", "common16bitpoll", "commoninterlacedblock", "commondualblocks",
-        "commonbank0", "commonbank1", "modeselection", "commondirect",
-        "gpio", "iocon", "ioconA", "iodir", "gppu", "defval", "olat", "gpinten",
-        "unwatch", "undef"
+        "tca9548", "onoff"
       ]
     }]
   }
