--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johntalton/tca9548",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -9,12 +9,21 @@
   "author": "johntalton@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@johntalton/and-other-delights": "johntalton/and-other-delights",
+    "@johntalton/and-other-delights": "github:johntalton/and-other-delights",
     "throat": "^5.0.0"
   },
   "devDependencies": {
-    "@johntalton/rasbus": "johntalton/rasbus",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-immutable": "^1.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^25.4.1",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-no-use-extend-native": "^0.5.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-spellcheck": "0.0.16",
+    "i2c-bus": "^5.2.0",
     "onoff": "^6.0.0"
   },
   "repository": {
