--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,8 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches: [**]
+on: push
 
 jobs:
   lint:
@@ -12,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2.3.1
     - uses: actions/setup-node@v2.0.0
     - run: npm install
-    - run: 
+    - run: npm run build --if-present
     - run: npm run lint
   diagrams:
     name: Diagrams
