--- a/package.json
+++ b/package.json
@@ -1,22 +1,52 @@
 {
   "name": "@johntalton/tca9548",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "",
-  "main": "src/index.js",
+  "author": "johntalton@gmail.com",
+  "license": "MIT",
+  "main": "src/tca9548.js",
+  "exports": {
+    "import": "./src/tca9548.js",
+    "require": "./src/tca9548.js"
+  },
+  "type": "commonjs",
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "files": [
+    "src/**/*.js"
+  ],
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
     "generateDiagrams": "npm run -s generateDiagram:multibus & npm run -s generateDiagram:multiplex",
     "generateDiagram:multibus": "./node_modules/.bin/mmdc -i examples/diagram-multibus.mmd -o examples/multibus.svg",
-    "generateDiagram:multiplex": "./node_modules/.bin/mmdc -i examples/diagram-multiplex.mmd -o examples/multiplex.svg"
+    "generateDiagram:multiplex": "./node_modules/.bin/mmdc -i examples/diagram-multiplex.mmd -o examples/multiplex.svg",
+    "test:mocha": "mocha",
+    "coverage:c8": "./node_modules/.bin/c8 --check-coverage --all --include src/**/*.js --lines 75 --functions 5 --branches 85 --reporter lcov --reporter text npm --silent run test:mocha -- --no-parallel --reporter min"
   },
-  "author": "johntalton@gmail.com",
-  "license": "MIT",
+  "mocha": {
+    "spec": [
+      "test/*.spec.js"
+    ],
+    "grep": "@broken|@slow",
+    "invert": true,
+    "parallel": true,
+    "slow": 2,
+    "timeout": 31,
+    "watch": false,
+    "sort": false,
+    "forbitOnly": true,
+    "check-leaks": true,
+    "global": []
+  },
   "dependencies": {
     "@johntalton/and-other-delights": "^2.0.0",
     "throat": "^5.0.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^8.5.1-2",
+    "c8": "^7.2.0",
+    "chai": "^4.2.0",
     "eslint": "^7.1.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-immutable": "^1.0.0",
@@ -28,6 +58,7 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-spellcheck": "0.0.17",
     "i2c-bus": "^5.2.0",
+    "mocha": "^8.0.1",
     "onoff": "^6.0.0"
   },
   "repository": {
