--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -1,7 +1,7 @@
-name: Publish Package (NPM / GitHub)
+name: Publish (NPM / GitHub)
 on:
   release:
-    types: [created]
+    types: [published]
 jobs:
   release:
     runs-on: ubuntu-latest
