--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johntalton/tca9548a",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "description": "",
   "author": "johntalton@gmail.com",
   "license": "MIT",
@@ -10,9 +10,6 @@
     "require": "./src/index.js"
   },
   "type": "commonjs",
-  "engines": {
-    "node": ">=12.0.0"
-  },
   "files": [
     "src/**/*.js"
   ],
@@ -40,8 +37,7 @@
     "global": []
   },
   "dependencies": {
-    "@johntalton/and-other-delights": "^3.0.2",
-    "throat": "^5.0.0"
+    "@johntalton/and-other-delights": "^3.0.2"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^8.5.3",
