--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "global": []
   },
   "dependencies": {
-    "@johntalton/and-other-delights": "^3.0.2",
     "throat": "^5.0.0"
   },
   "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^8.5.3",
+    "@johntalton/and-other-delights": "^3.0.2",
+    "@johntalton/boschieu": "^3.0.0",
     "c8": "^7.2.0",
     "chai": "^4.2.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.22.0",
