--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,24 +3,11 @@ name: CI
 on: push
 
 jobs:
-  lint:
-    name: Lint
+  Lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.1
     - uses: actions/setup-node@v2.1.1
     - run: npm install
     - run: npm run build --if-present
-    - run: npm run lint
-  diagrams:
-    name: Diagrams
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2.3.1
-    - uses: actions/setup-node@v2.1.1
-    - run: npm install
-    - run: npm run generateDiagrams
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Diagrams
-        path: examples/*.svg
+    - run: npm run lint --if-present
