--- a/.github/workflows/DIAGRAMS.yml
+++ b/.github/workflows/DIAGRAMS.yml
@@ -1,12 +1,12 @@
-name Diagrams
+name: Diagrams
 
-on
+on:
   push:
     paths:
       - '**/*.mermaid'
       - '**/*.md'
 
-job:
+jobs:
   Diagrams:
     runs-on: ubuntu-latest
     steps:
