--- a/.github/workflows/DIAGRAMS.yml
+++ b/.github/workflows/DIAGRAMS.yml
@@ -16,7 +16,7 @@ jobs:
   Diagrams:
     runs-on: ubuntu-latest
     steps:
-    - runs: echo "${{ github.event.inputs.reason }}"
+    - run: echo "${{ github.event.inputs.reason }}"
     - uses: actions/checkout@v2.3.1
     - uses: neenjaw/compile-mermaid-markdown-action@master
       with:
