--- a/.github/workflows/DIAGRAMS.yml
+++ b/.github/workflows/DIAGRAMS.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - '**/*.mermaid'
       - '**/*.md'
+      - '**/workflows/DIAGRAMS.yml'
   workflow_dispatch:
     inputs:
       reason:
@@ -20,7 +21,8 @@ jobs:
     - uses: actions/checkout@v2.3.1
     - uses: neenjaw/compile-mermaid-markdown-action@master
       with:
-        files: './examples/*.md'
+        files: examples/*.md
+        output: diagrams/
     - uses: actions/upload-artifact@v2
       with:
         name: example/*.svg
