--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@johntalton/tca9548a",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "",
   "author": "johntalton@gmail.com",
   "license": "MIT",
   "main": "src/index.js",
   "exports": {
-    "import": "./src/index.js",
-    "require": "./src/index.js"
+    "import": "./src/index.js"
   },
-  "type": "commonjs",
+  "type": "module",
   "files": [
     "src/**/*.js"
   ],
@@ -18,8 +17,41 @@
     "generateDiagrams": "npm run -s generateDiagram:multibus & npm run -s generateDiagram:multiplex",
     "generateDiagram:multibus": "./node_modules/.bin/mmdc -i examples/diagram-multibus.mmd -o examples/multibus.svg",
     "generateDiagram:multiplex": "./node_modules/.bin/mmdc -i examples/diagram-multiplex.mmd -o examples/multiplex.svg",
-    "test:mocha": "mocha",
+    "test": "mocha",
     "coverage:c8": "./node_modules/.bin/c8 --check-coverage --all --include src/**/*.js --lines 75 --functions 5 --branches 85 --reporter lcov --reporter text npm --silent run test:mocha -- --no-parallel --reporter min"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@johntalton/eslint-config/js",
+      "@johntalton/eslint-config/es"
+    ],
+    "env": {
+      "node": false
+    },
+    "rules": {
+      "import/extensions": "off",
+      "spellcheck/spell-checker": [
+        "error",
+        {
+          "identifiers": false,
+          "minLength": 3,
+          "skipWords": [
+            "johntalton",
+            "todo",
+            "const",
+            "eslint",
+            "bitwise",
+            "param",
+            "tca9548a",
+            "tca9548",
+            "onoff",
+            "chai",
+            "mqtt",
+            "gpio"
+          ]
+        }
+      ]
+    }
   },
   "mocha": {
     "spec": [
@@ -36,17 +68,16 @@
     "check-leaks": true,
     "global": []
   },
-  "dependencies": {},
   "devDependencies": {
-    "@johntalton/and-other-delights": "^3.0.2",
-    "@johntalton/boschieu": "^3.0.0",
+    "@johntalton/and-other-delights": "file:../and-other-delights",
+    "@johntalton/eslint-config": "^2.0.0",
     "c8": "^7.2.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.0.3",
+    "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
     "eslint-plugin-promise": "^4.2.1",
