update test and tune

--- a/package.json
+++ b/package.json
@@ -18,17 +18,42 @@
     "generateDiagram:multibus": "./node_modules/.bin/mmdc -i examples/diagram-multibus.mmd -o examples/multibus.svg",
     "generateDiagram:multiplex": "./node_modules/.bin/mmdc -i examples/diagram-multiplex.mmd -o examples/multiplex.svg",
     "test": "mocha",
-    "coverage:c8": "./node_modules/.bin/c8 --check-coverage --all --include src/**/*.js --lines 75 --functions 5 --branches 85 --reporter lcov --reporter text npm --silent run test:mocha -- --no-parallel --reporter min"
+    "coverage": "npm run coverage:c8",
+    "coverage:c8": "./node_modules/.bin/c8 --check-coverage --all --include src/**/*.js --lines 75 --functions 5 --branches 85 --reporter lcov --reporter text npm --silent run test -- --no-parallel --reporter min"
   },
   "eslintConfig": {
     "extends": [
       "@johntalton/eslint-config/js",
       "@johntalton/eslint-config/es"
     ],
+    "ignorePatterns": [
+      "test/**",
+      "examples/**"
+    ],
+    "globals": {
+      "console": false
+    },
     "env": {
       "node": false
     },
     "rules": {
+      "semi": "warn",
+      "import/group-exports": "off",
+
+      "fp/no-throw": "off",
+      "no-undefined": "off",
+      "fp/no-nil": "off",
+      "fp/no-unused-expression": "off",
+      "require-await": "off",
+      "fp/no-this": "off",
+      "immutable/no-this": "off",
+      "fp/no-mutation": "off",
+      "immutable/no-mutation": "off",
+      "no-magic-numbers": "off",
+      "import/prefer-default-export": "off",
+      "import/extensions": "off",
+      "fp/no-class": "off",
+
       "import/extensions": "off",
       "spellcheck/spell-checker": [
         "error",
@@ -69,8 +94,8 @@
     "global": []
   },
   "devDependencies": {
-    "@johntalton/and-other-delights": "file:../and-other-delights",
-    "@johntalton/eslint-config": "^2.0.0",
+    "@johntalton/and-other-delights": "github:johntalton/and-other-delights#module",
+    "@johntalton/eslint-config": "github:johntalton/eslint-config",
     "c8": "^7.2.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
