--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: CI
 on: push
 
 jobs:
-  Lint:
+  Test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.1
@@ -11,3 +11,4 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm run lint --if-present
+    - run: npm run covrage --if-present
