--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,4 +11,4 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm run lint --if-present
-    - run: npm run covrage --if-present
+    - run: npm run coverage --if-present
