--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@johntalton/tca9548a",
-  "version": "5.0.0",
-  "description": "",
+  "version": "5.1.0",
   "author": "johntalton@gmail.com",
   "license": "MIT",
   "main": "src/index.js",
@@ -13,105 +12,9 @@
     "src/**/*.js"
   ],
   "scripts": {
-    "lint": "./node_modules/.bin/eslint .",
-    "generateDiagrams": "npm run -s generateDiagram:multibus & npm run -s generateDiagram:multiplex",
-    "generateDiagram:multibus": "./node_modules/.bin/mmdc -i examples/diagram-multibus.mmd -o examples/multibus.svg",
-    "generateDiagram:multiplex": "./node_modules/.bin/mmdc -i examples/diagram-multiplex.mmd -o examples/multiplex.svg",
-    "test": "mocha",
-    "coverage": "npm run coverage:c8",
-    "coverage:c8": "./node_modules/.bin/c8 --check-coverage --all --include src/**/*.js --lines 75 --functions 5 --branches 85 --reporter lcov --reporter text npm --silent run test -- --no-parallel --reporter min"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@johntalton/eslint-config/js",
-      "@johntalton/eslint-config/es"
-    ],
-    "ignorePatterns": [
-      "test/**",
-      "examples/**"
-    ],
-    "globals": {
-      "console": false
-    },
-    "env": {
-      "node": false
-    },
-    "rules": {
-      "semi": "warn",
-      "import/group-exports": "off",
-
-      "fp/no-throw": "off",
-      "no-undefined": "off",
-      "fp/no-nil": "off",
-      "fp/no-unused-expression": "off",
-      "require-await": "off",
-      "fp/no-this": "off",
-      "immutable/no-this": "off",
-      "fp/no-mutation": "off",
-      "immutable/no-mutation": "off",
-      "no-magic-numbers": "off",
-      "import/prefer-default-export": "off",
-      "import/extensions": "off",
-      "fp/no-class": "off",
-
-      "import/extensions": "off",
-      "spellcheck/spell-checker": [
-        "error",
-        {
-          "identifiers": false,
-          "minLength": 3,
-          "skipWords": [
-            "johntalton",
-            "todo",
-            "const",
-            "eslint",
-            "bitwise",
-            "param",
-            "tca9548a",
-            "tca9548",
-            "onoff",
-            "chai",
-            "mqtt",
-            "gpio"
-          ]
-        }
-      ]
-    }
-  },
-  "mocha": {
-    "spec": [
-      "test/*.spec.js"
-    ],
-    "grep": "@broken|@slow",
-    "invert": true,
-    "parallel": true,
-    "slow": 2,
-    "timeout": 31,
-    "watch": false,
-    "sort": false,
-    "forbitOnly": true,
-    "check-leaks": true,
-    "global": []
   },
   "devDependencies": {
-    "@johntalton/and-other-delights": "^6.0.0",
-    "@johntalton/eslint-config": "github:johntalton/eslint-config",
-    "c8": "^7.2.0",
-    "chai": "^4.2.0",
-    "eslint": "^8.10.0",
-    "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-immutable": "^1.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-mocha": "^10.0.3",
-    "eslint-plugin-no-loops": "^0.3.0",
-    "eslint-plugin-no-use-extend-native": "^0.5.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-spellcheck": "0.0.20",
-    "i2c-bus": "^5.2.0",
-    "mermaid": "^10.1.0",
-    "mocha": "^10.2.0",
-    "onoff": "^6.0.0"
+    "@johntalton/and-other-delights": "^8.1.0"
   },
   "repository": {
     "type": "git",
