--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -1,4 +1,4 @@
-name: Publish (NPM / GitHub)
+name: Publish (NPM)
 on:
   release:
     types: [published]
@@ -17,11 +17,3 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-    # Publish to GitHub
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '14'
-        registry-url: 'https://npm.pkg.github.com/'
-    - run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
