--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -1,4 +1,7 @@
 name: Publish (NPM)
+permissions:
+  contents: read
+  pull-requests: write
 on:
   release:
     types: [published]
@@ -6,13 +9,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     # Publish to NPM
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
-        node-version: '14'
         registry-url: 'https://registry.npmjs.org/'
     - run: npm install
+    - run: npm run build --if-present
+    - run: npm run format --if-present
     - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
