--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johntalton/tca9548a",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "author": "johntalton@gmail.com",
   "license": "MIT",
   "main": "src/index.js",
@@ -17,7 +17,6 @@
     "@johntalton/and-other-delights": "^8.1.0"
   },
   "repository": {
-    "type": "git",
-    "url": "git@github.com:johntalton/tca9548a.git"
+    "url": "https://github.com/johntalton/tca9548a"
   }
 }
